# variflect

./: CMakeLists.txt  README.md
include/: json_parser.hh  types.hh  variant.hh  variflect.hh  x.json
python/: variflect.py
src/: json_parser.cc  variant.cc  variflect  variflect.cc
test/: test_codegen.hh  test_variant.cc
